12_26_2023_CFN_Asg_Lt/Cfn_Asg_LT.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  This CFN template create ASG and ALB with ASG Target Tracking Policy
Parameters:

  mySubnets:
    Description: Choose at least two subnets
    Type: List<AWS::EC2::Subnet::Id>

  myEnvParam:
    Description: Choose your env type
    Type: String
    Default: prod
    AllowedValues:
      - prod
      - test
      - staging

  myInstanceType:
    Description: Choose your ec2 type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.nano
      - t3.micro
      - t4g.micro

  myKeyPair:
    Description: Choose your keypair
    Type: AWS::EC2::KeyPair::KeyName

  myVPC:
    Description: Choose your vpc
    Type: AWS::EC2::VPC::Id
  
Mappings:
  
  myRegionImageMap:
    us-east-1:
      prod: ami-079db87dc4c10ac91
      test: ami-098143f68772b34f5
    us-east-2:
      prod: ami-0ee4f2271a4df2d7d
      test: ami-0dbb0f9887f1fe98f
    us-west-1:
      prod: ami-0082110c417e4726e
      test: ami-04669a22aad391419
Resources:
  myASGPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref myASG # Required
      PolicyType:  TargetTrackingScaling 
      TargetTrackingConfiguration:
        PredefinedMetricSpecification: 
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 60.0
  myASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: asg-cfn-16
      DesiredCapacity: 1
      HealthCheckGracePeriod: 300
      HealthCheckType: ELB
      LaunchTemplate:
        LaunchTemplateId: !Ref myLT
        Version: !GetAtt myLT.DefaultVersionNumber
      MaxSize: 3 # Required
      MinSize: 1 # Required
      TargetGroupARNs: 
        - !GetAtt myTargetGrp.TargetGroupArn
      VPCZoneIdentifier: !Ref mySubnets


  myListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions: # Required
        - TargetGroupArn: !GetAtt myTargetGrp.TargetGroupArn # !Ref myTargetGrp
          Type: forward
      LoadBalancerArn: !Ref myALB # !GettAtt myALB.LoadBalancerArn
      Port: 80
      Protocol: HTTP

  myALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: asg-cfn-16
      SecurityGroups: 
        - !Ref mySecGrp #!GetAtt mySecGrp.GroupId 
      Subnets: !Ref mySubnets
      Type: application
  
  myLT:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !FindInMap 
          - myRegionImageMap
          - !Ref "AWS::Region"
          - !Ref myEnvParam
        InstanceType: !Ref myInstanceType
        KeyName: !Ref myKeyPair
        SecurityGroupIds:
          - !GetAtt mySecGrp.GroupId # !Ref mySecGrp
        UserData: !Base64 |
          #!/bin/bash
          #update os
          dnf update -y
          #install apache server
          dnf install -y httpd
          # get private ip address of ec2 instance using instance metadata
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PRIVATE_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4`
          # get public ip address of ec2 instance using instance metadata
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PUBLIC_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/public-ipv4` 
          # get date and time of server
          DATE_TIME=`date`
          # set all permissions
          chmod -R 777 /var/www/html
          # create a custom index.html file
          echo "<html>
              <head>
              <title> Application Load Balancer</title>
              </head>
              <body>
                  <h1>Testing Application Load Balancer</h1>
                  <h2>Congratulations! You have created an instance from Launch Template</h2>
                  <h3>This web server is launched from the launch template by Osvaldo via CFN</h3>
                  <p>This instance is created at <b>$DATE_TIME</b></p>
                  <p>Private IP address of this instance is <b>$PRIVATE_IP</b></p>
                  <p>Public IP address of this instance is <b>$PUBLIC_IP</b></p>
              </body>
              </html>" > /var/www/html/index.html
              # start apache server
              systemctl start httpd
              systemctl enable httpd
      LaunchTemplateName: asg-cfn-16

  myTargetGrp:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: /
      HealthCheckPort: 80
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      Name: asg-cfn-16
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 2
      VpcId: !Ref myVPC

  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ssh and http # Required
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: asg-16-cfn 
      VpcId: !Ref myVPC
  
Outputs:
   DNSofELB:
    Description: Gives DNS of ELB
    Value: !Join
    - ''
    - - 'http://'
      - !GetAtt myALB.DNSName
